# numba-stubs

./: README.md  pyproject.toml
src/numba-stubs/: __init__.pyi  _decorators.pyi  _stubs_types.pyi  _types.pyi
src/numba-stubs/experimental/: __init__.pyi  _main.pyi
tests/: main.py
