[project]
name = "numba-stubs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "OutSquareCapital", email = "166045166+OutSquareCapital@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []
[dependencies]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "numba>=0.61.2",
]
